src/components/StageText/StageText.css
.stage-wrapper {
    position: relative;
    height: 100dvh;
    z-index: 3;
}

.stage-content {
    position: absolute;
    top: 50%;
    transform: translateY(-58%);
    right: 0;
}

.stage-headline {
    font-family: 'Story Script', cursive;
    font-size: clamp(2.9rem, 14vw, 8rem);
    line-height: 1.2;
    margin-block: 0;
    text-shadow: 0 4px 16px rgba(0,0,0,0.15);
    hyphens: word;
    word-break: normal;
    letter-spacing: 2px;
    color: var(--color-text-super-light-purple);
}

#copyright {
    font-size: clamp(1.4rem, 8vw, 3rem);
    font-family: 'PT Sans', Arial, sans-serif;
    vertical-align: top;
}

.stage-subline {
    margin: 2rem 0 4rem;
    font-size: larger;
    color: var(--color-text-light-purple);
}


@media (min-width: 768px) {
    .stage-content {
        max-width: 60%;
        height: auto;
    }    
}

